fixed squishing logos

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,8 @@
 body {
   font-family: "Open Sans", sans-serif;
   color: #212529;
+  padding: 0%;
+  margin: 0%;
 }
 
 a {
